k8s/namespace-external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external
  labels:
    name: external
