k8s/namespace-tier1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tier-1
  labels:
    name: tier-1
