k8s/namespace-tier2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tier-2
  labels:
    name: tier-2
