k8s/pod2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod2-ssh-service
  namespace: internal
spec:
  selector:
    app: pod2-ssh
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: ClusterIP
